--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,3 +14,20 @@
  *= require_self
  */
 @import "semantic-ui";
+.ui.text.container {
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+//overlay
+// .overlay {
+//     float: left;
+//     margin: 0em 3em 1em 0em;
+//   }
+// .overlay .menu {
+// position: relative;
+// left: 0;
+// transition: left 0.5s ease;
+// }
+// .overlay.fixed .menu {
+//     left: 127px;
+// }
