添加projects页面，为post添加样式

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,6 +18,13 @@
     margin-top: 2em;
     margin-bottom: 2em;
 }
+.highlight {
+    margin-top: 15px;
+    background: #2D3037;
+    padding: 5px 40px;
+    // margin-left: -10px;
+    // margin-right: -10px;
+   	}
 //overlay
 // .overlay {
 //     float: left;
