--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,13 @@
-<div class="ui sizer vertical piled segments">
-<% @posts.each do |post| %>
-<div class="ui segment">
-	<div class="ui huge header">
-			<%= link_to post.title, post %>
+<div class="sixteenth wide column">
+	<%= will_paginate @posts %>
+	<div class="ui sizer vertical piled segments">
+		<% @posts.each do |post| %>
+			<div class="ui segment">
+				<div class="ui huge header">
+					<%= link_to post.title, post %>
+				</div>
+				<p><%= post.created_at.strftime("%B, %d, %Y") %></p>	
+			</div>	
+		<% end %>
 	</div>
-	<p><%= post.created_at.strftime("%B, %d, %Y") %></p>	
-</div>	
-<% end %>
 </div>
