--- a/app/views/staticpages/projects.html.erb
+++ b/app/views/staticpages/projects.html.erb
@@ -1,2 +1,17 @@
-<h1>Staticpages#projects</h1>
-<p>Find me in app/views/staticpages/projects.html.erb</p>
+
+<div class="sixteenth wide column">
+	<div class="ui sizer vertical piled segments">
+		<div class="ui segment">
+			<div class="ui huge header">
+				<a href="">title</a>
+			</div>
+				<p>description</p>	
+		</div>
+		<div class="ui segment">
+			<div class="ui huge header">
+				<a href="">title</a>
+			</div>
+				<p>description</p>	
+		</div>		
+	</div>
+</div>
