--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,6 +9,6 @@
 		<%= link_to 'delete', post_path(@post), method: :delete, data: { confirm: "are you sure" } %>
 	</div>
 	<p>
-	<%= @post.body %>
+	<%= markdown @post.body %>
 	</p>
 </div>
