--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,10 +5,11 @@
 	</div>
 	<div class="ui small header">
 		created at <%= time_ago_in_words(@post.created_at) %> ago
+		<% if logged_in?  %>
 		<%= link_to 'edit', edit_post_path(@post) %>
 		<%= link_to 'delete', post_path(@post), method: :delete, data: { confirm: "are you sure" } %>
+		<% end %>
 	</div>
-	<p>
-	<%= markdown @post.body %>
-	</p>
+	<p><%= markdown @post.body %></p>
+	
 </div>
