--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,6 +18,13 @@
     margin-top: 2em;
     margin-bottom: 2em;
 }
+#top {
+	a:hover {
+		color: #6493af;
+		// border: 1px solid #93a2a9 ; 
+
+	}
+}
 .highlight {
     margin-top: 15px;
     background: #2D3037;
