--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,11 +17,12 @@
     </div> -->
 
 	<div class="ui  tabular  menu" id="top">
-		<a href="http://icsbear.herokuapp.com/" class=" item" ><i class='home icon'></i>Home</a>
+		<%= link_to "Home", root_path, class: "item" %>
+		<%= link_to "Posts", posts_path, class: "item" %>
+		<%= link_to "Projects", projects_path, class: "item" %>
+		<!-- <a href="http://icsbear.herokuapp.com/" class=" item" ><i class='home icon'></i>Home</a>
 		<a href="http://icsbear.herokuapp.com/posts" class="item" ><i class="file text out icon"></i>Posts</a>
-		<a href="http://icsbear.herokuapp.com/projects" class="item" ><i class="cubes icon"></i>Projects</a>
-		
-		
+		<a href="http://icsbear.herokuapp.com/projects" class="item" ><i class="cubes icon"></i>Projects</a> -->
 		<!-- <div class="ui bottom attached tab " data-tab="first"></div>
 		<div class="ui bottom attached tab " data-tab="second"></div>
 		<div class="ui bottom attached tab " data-tab="third"></div> -->
@@ -54,8 +55,8 @@
 		<div class="ui divider"></div>
 		<div class="ui  container">
 			<a href="https://github.com/icsbear" class="item"> <i class="big link github icon"></i> </a>
-			<a href="" class="item"> <i class="big link twitter icon"></i></a>
-			<a href="" class="item"> <i class="big link weibo icon"></i></a>
+			<a href="https://twitter.com/Icsbearr" class="item"> <i class="big link twitter icon"></i></a>
+			<a href="http://weibo.com/2838448780/profile?rightmod=1&wvr=6&mod=personinfo&is_all=1" class="item"> <i class="big link weibo icon"></i></a>
 		</div>
 			
 	</div>
