--- a/app/views/staticpages/index.html.erb
+++ b/app/views/staticpages/index.html.erb
@@ -4,23 +4,25 @@
 	    <img src="https://avatars2.githubusercontent.com/u/4828152?v=3&s=460">
 	  </div>
 	  <div class="content">
-	    <a class="header">Kristy</a>
+	    <div class="header">Icsbear</div>
 	    <div class="meta">
-	      <span class="date">Joined in 2013</span>
+	      <span class="date">Make this in 2016</span>
 	    </div>
 	    <div class="description">
-	      Kristy is an art director living in New York.
+	      Icsbear is a student of HDU living in Hangzhou.
 	    </div>
 	  </div>
 	  <div class="extra content">
-	    <a>
-	      <i class="user icon"></i>
-	      22 Friends
+	    <a href="mailto:icsbear@gmail.com">
+	      <i class="mail icon"></i>
+	      Contact me
 	    </a>
 	  </div>
 	</div>
 </div>
 <div class="eight wide column">
-	<h2>About me</h2>
-	<p>To ensure cards are equal height use the plural, cards. Card groups automatically uses flex styles to match height between cards in the same row.p>To ensure cards are equal height use the plural, cards. Card groups automatically uses flex styles to match height between cards in the same row.p>To ensure cards are equal height use the plural, cards. Card groups automatically uses flex styles to match height between cards in the same row.</p><p>To ensure cards are equal height use the plural, cards. Card groups automatically uses flex styles to matautomatically uses flex styles to match height between cards in the same row.p>To ensure cards are equal height use the plura styles to match height between cards in the same row.</p>	
+	<h2>关于我</h2>
+	<p>我是一名就读于杭州电子科技大学的通信工程专业的学生，即将于2016年7月毕业离开学校。</p>
+	<p>目前我正在学习<a href="http://rubyonrails.org/">Ruby on Rails</a>当中，你现在所访问的就是我使用Ruby on Rails搭建在<a href="https://www.heroku.com/">Heroku</a>上的博客，前端方面我则使用了 <a href="http://www.semantic-ui.com/">Semantic Ui。</a></p>	
+	<p>目前这个博客只有一些简单的功能，例如由<a href="https://rubygems.org/gems/will_paginate">will_paginate</a>提供的分页功能，由<a href="https://rubygems.org/gems/redcarpet">redcarpet</a>和<a href="https://rubygems.org/gems/pygments.rb">pygments.rb</a>提供的Markdown语法以及代码高亮的支持，我会逐步的完善它，并在这个过程中不断的学习Rails。</p>
 </div>
