添加多说评论2

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,7 +27,7 @@
 }
 .highlight {
     margin-top: 15px;
-    background: #F5F5F5;
+    background: #3e3c3d;
     padding: 5px 40px;
     // margin-left: -10px;
     // margin-right: -10px;
