--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,6 +12,6 @@
 	</div>
 	<p><%= markdown @post.body %></p>
 	<!-- 多说评论框 start -->
-	<div class="ds-thread" data-thread-key=<%= @post.id %> data-title='<%= @post.title %>' data-url="post_url"></div>
+	<div class="ds-thread" data-thread-key=<%= @post.id %> data-title='<%= @post.title %>' data-url="<%= post_url %>"></div>
 	<!-- 多说评论框 end -->
 </div>
