--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,14 @@
+<script type="text/javascript">
+	var duoshuoQuery = {short_name:"icsbear"};
+		(function() {
+			var ds = document.createElement('script');
+			ds.type = 'text/javascript';ds.async = true;
+			ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+			ds.charset = 'UTF-8';
+			(document.getElementsByTagName('head')[0] 
+			 || document.getElementsByTagName('body')[0]).appendChild(ds);
+		})();
+</script>
 
 <div class="ui  basic segment">
 	<div class="ui huge header">
@@ -12,6 +23,6 @@
 	</div>
 	<p><%= markdown @post.body %></p>
 	<!-- 多说评论框 start -->
-	<div class="ds-thread" data-thread-key=<%= @post.id %> data-title='<%= @post.title %>' data-url="<%= post_url %>"></div>
-	<!-- 多说评论框 end -->
+	<div class="ds-thread" data-thread-key="<%= @post.id %>" data-title="<%= @post.title %>" data-url= <%=post_url(@post) %>> </div>
+<!-- 多说评论框 end -->
 </div>
