--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,6 +10,12 @@
 		<% end %>
 	</div>
 	<p><%= markdown @post.body %></p>
+	<% @post.tag_list.each do |tag| %>  
+             <%= link_to tag, { :action => :tag, :id => tag } %>  
+	<% end %> 
+
+
+
 	<%= render 'comments' %>
 
 </div>
