修复bug，完成tag功能

--- a/app/views/posts/tag.html.erb
+++ b/app/views/posts/tag.html.erb
@@ -1,2 +1,6 @@
-<%= params[:id] %>
-<%= render 'list' %>
+<div class="ui center aligned container">
+	<div class="ui blue massive tag label"><%= params[:id] %></div> 
+
+</div>
+
+<div class="ui container"><%= render 'list' %></div>
