--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
 		<%= link_to "Home", root_path, class: "item" %>
 		<%= link_to "Posts", posts_path, class: "item" %>
 		<%= link_to "Projects", projects_path, class: "item" %>
+		<%= link_to "Tags", tags_path, class: "item" %>
 		<!-- <a href="http://icsbear.herokuapp.com/" class=" item" ><i class='home icon'></i>Home</a>
 		<a href="http://icsbear.herokuapp.com/posts" class="item" ><i class="file text out icon"></i>Posts</a>
 		<a href="http://icsbear.herokuapp.com/projects" class="item" ><i class="cubes icon"></i>Projects</a> -->
