--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,9 +11,8 @@
 	</div>
 	<p><%= markdown @post.body %></p>
 	<% @post.tag_list.each do |tag| %>  
-             <%= link_to tag, { :action => :tag, :id => tag } %>  
+             <%= link_to tag, { :action => :tag, :id => tag }, class: "ui blue tag label" %>  
 	<% end %> 
-
 
 
 	<%= render 'comments' %>
