--- a/app/views/staticpages/projects.html.erb
+++ b/app/views/staticpages/projects.html.erb
@@ -3,15 +3,15 @@
 	<div class="ui sizer vertical piled segments">
 		<div class="ui segment">
 			<div class="ui huge header">
-				<a href="">title</a>
+				<a href="https://github.com/icsbear/blog">我的博客</a>
 			</div>
-				<p>description</p>	
+				<p>一个使用Ruby on Rails搭建在Heroku上的博客。前端使用了Semantic UI，由will_paginate提供的分页功能，由redcarpet和pygments.rb提供的Markdown语法以及代码高亮的支持，由acts-as-taggable-on提供了标签功能。</p>	
 		</div>
-		<div class="ui segment">
+		<!-- <div class="ui segment">
 			<div class="ui huge header">
 				<a href="">title</a>
 			</div>
 				<p>description</p>	
-		</div>		
+		</div>	 -->	
 	</div>
 </div>
